kubernetes/base/k8s/api-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/m-s-team/psychology-api
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 0.5
              memory: 500Mi
            requests:
              cpu: 0.1
              memory: 100Mi
      imagePullSecrets:
        - name: github-package
